insert static layout

--- a/index.html
+++ b/index.html
@@ -16,12 +16,29 @@
 
 </head>
 <body>
-    
+    <header>
+        <h1 class="titolo">todolist</h1>
+    </header>
+    <hr>
+    <div class="container">
+        <div class="insert">
+            <input type="text" placeholder="Che cosa devi fare?">
+            <button>Aggiungi</button>
+        </div>
+        <div class="lista">
+            <ul>
+                <li>Dare da mangiare al cane <i class="fas fa-times"></i></li>
+                <li>Fare la pasta <i class="fas fa-times"></i></li>
+                <li>Andare a comprare il pane <i class="fas fa-times"></i></li>
+            </ul>
+        </div>
+    </div>
 
 
 
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/35fd86ea03.js" crossorigin="anonymous"></script>
 </body>
 </html>
